tests/pass/InterfaceWithThrow.java
package pass;

public interface InterfaceWithThrow {
	public void interfaceMethodWithThrow() throws Exception;
}
